#!/usr/bin/env python3
"""
–ò–Ω—Ç–µ–≥—Ä–∞—Ü–∏–æ–Ω–Ω—ã–π —Ç–µ—Å—Ç –ø–æ–ª–Ω–æ–π —Ü–µ–ø–æ—á–∫–∏: –∑–∞–ø—Ä–æ—Å ‚Üí –æ–±—Ä–∞–±–æ—Ç–∫–∞ ‚Üí –æ—Ç–ø—Ä–∞–≤–∫–∞ –∫–ª–∏–µ–Ω—Ç—É

–ü—Ä–æ–≤–µ—Ä—è–µ—Ç:
1. gRPC –∑–∞–ø—Ä–æ—Å –ø—Ä–∏—Ö–æ–¥–∏—Ç –Ω–∞ —Å–µ—Ä–≤–µ—Ä
2. –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç—Å—è —á–µ—Ä–µ–∑ StreamingWorkflowIntegration
3. –ü—Ä–∞–≤–∏–ª—å–Ω–æ –∏–∑–≤–ª–µ–∫–∞–µ—Ç—Å—è JSON –∏ command_payload
4. –ü—Ä–∞–≤–∏–ª—å–Ω–æ –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç—Å—è text_chunk, audio_chunk, command_payload –∫–ª–∏–µ–Ω—Ç—É
5. –ü—Ä–∞–≤–∏–ª—å–Ω—ã–π —Ñ–æ—Ä–º–∞—Ç –¥–∞–Ω–Ω—ã—Ö –≤ gRPC –æ—Ç–≤–µ—Ç–µ
"""

import sys
import os
import asyncio
from pathlib import Path
from typing import Dict, Any, Optional, List
from unittest.mock import AsyncMock, MagicMock

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ —Å–µ—Ä–≤–µ—Ä—É
project_root = Path(__file__).parent.parent.parent
sys.path.insert(0, str(project_root / "server"))

from integrations.workflow_integrations.streaming_workflow_integration import StreamingWorkflowIntegration
from config.unified_config import get_config


class MockTextModule:
    """–ú–æ–∫ –º–æ–¥—É–ª—è —Ç–µ–∫—Å—Ç–∞, –≤–æ–∑–≤—Ä–∞—â–∞—é—â–∏–π –æ—Ç–≤–µ—Ç—ã LLM"""
    
    def __init__(self, response: str):
        self.response = response
    
    async def process(self, request: Dict[str, Any]):
        """–ò–º–∏—Ç–∞—Ü–∏—è process –º–µ—Ç–æ–¥–∞"""
        async def stream():
            yield {"text": self.response, "type": "text_chunk"}
        return stream()


class MockAudioModule:
    """–ú–æ–∫ –º–æ–¥—É–ª—è –∞—É–¥–∏–æ, –≤–æ–∑–≤—Ä–∞—â–∞—é—â–∏–π —Ç–µ—Å—Ç–æ–≤—ã–µ –∞—É–¥–∏–æ —á–∞–Ω–∫–∏"""
    
    def __init__(self, audio_chunks: List[bytes] = None):
        self.audio_chunks = audio_chunks or [b"fake_audio_chunk_1", b"fake_audio_chunk_2"]
    
    async def process(self, request: Dict[str, Any]):
        """–ò–º–∏—Ç–∞—Ü–∏—è process –º–µ—Ç–æ–¥–∞"""
        async def stream():
            for chunk in self.audio_chunks:
                yield {"audio": chunk, "type": "audio_chunk"}
        return stream()


class MockTextFilterModule:
    """–ú–æ–∫ –º–æ–¥—É–ª—è —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏ —Ç–µ–∫—Å—Ç–∞"""
    
    async def process(self, request: Dict[str, Any]):
        """–ü—Ä–æ—Å—Ç–æ –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Ç–µ–∫—Å—Ç –∫–∞–∫ –µ—Å—Ç—å"""
        operation = request.get("operation")
        if operation == "clean_text":
            return {
                "success": True,
                "cleaned_text": request.get("text", "")
            }
        elif operation == "split_sentences":
            text = request.get("text", "")
            sentences = [s.strip() for s in text.split('.') if s.strip()]
            return {
                "success": True,
                "sentences": sentences,
                "remaining": ""
            }
        return {"success": False}


class MockGrpcStream:
    """–ú–æ–∫ gRPC —Å—Ç—Ä–∏–º–∞ –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω–Ω—ã—Ö –¥–∞–Ω–Ω—ã—Ö"""
    
    def __init__(self):
        self.sent_messages = []
    
    async def send(self, message):
        """–°–æ—Ö—Ä–∞–Ω—è–µ—Ç –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω–Ω–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ"""
        self.sent_messages.append(message)
    
    def get_messages(self):
        """–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç –≤—Å–µ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω–Ω—ã–µ —Å–æ–æ–±—â–µ–Ω–∏—è"""
        return self.sent_messages


async def test_text_only_response():
    """–¢–µ—Å—Ç 1: –û–±—ã—á–Ω—ã–π —Ç–µ–∫—Å—Ç–æ–≤—ã–π –æ—Ç–≤–µ—Ç (–±–µ–∑ –∫–æ–º–∞–Ω–¥—ã)"""
    print("\n" + "="*80)
    print("–¢–ï–°–¢ 1: –û–±—ã—á–Ω—ã–π —Ç–µ–∫—Å—Ç–æ–≤—ã–π –æ—Ç–≤–µ—Ç ‚Üí –∫–ª–∏–µ–Ω—Ç")
    print("="*80)
    
    # –°–∏–º—É–ª–∏—Ä—É–µ–º –æ–±—ã—á–Ω—ã–π –æ—Ç–≤–µ—Ç LLM
    llm_response = "Hello! How can I help you today?"
    
    text_module = MockTextModule(llm_response)
    audio_module = MockAudioModule()
    text_filter = MockTextFilterModule()
    
    workflow = StreamingWorkflowIntegration(
        text_processor=text_module,
        audio_processor=audio_module,
        text_filter_manager=text_filter,
        memory_workflow=None
    )
    
    await workflow.initialize()
    
    # –°–∏–º—É–ª–∏—Ä—É–µ–º –∑–∞–ø—Ä–æ—Å (—Ñ–æ—Ä–º–∞—Ç –∫–∞–∫ –≤ gRPC)
    request_data = {
        "text": "Hello",
        "screenshot": None,
        "session_id": "test_session_text_123",
        "hardware_id": "test_hardware_123"
    }
    
    # –°–æ–±–∏—Ä–∞–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
    text_chunks = []
    audio_chunks = []
    command_payload = None
    
    async for result in workflow.process_request_streaming(request_data):
        if result.get('text_response'):
            text_chunks.append(result['text_response'])
        if result.get('audio_chunk'):
            audio_chunks.append(result['audio_chunk'])
        if result.get('command_payload'):
            command_payload = result['command_payload']
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
    print(f"\nüìä –†–µ–∑—É–ª—å—Ç–∞—Ç—ã:")
    print(f"   ‚úÖ Text chunks: {len(text_chunks)}")
    print(f"   ‚úÖ Audio chunks: {len(audio_chunks)}")
    print(f"   ‚úÖ Command payload: {'–µ—Å—Ç—å' if command_payload else '–Ω–µ—Ç'}")
    
    if text_chunks and not command_payload:
        print(f"   ‚úÖ –¢–µ–∫—Å—Ç –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω: {text_chunks[0][:50]}...")
        print(f"   ‚úÖ –ö–æ–º–∞–Ω–¥–∞ –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç (–∫–∞–∫ –∏ –æ–∂–∏–¥–∞–ª–æ—Å—å)")
        print(f"\n‚úÖ –¢–ï–°–¢ 1 –ü–†–û–ô–î–ï–ù: –û–±—ã—á–Ω—ã–π —Ç–µ–∫—Å—Ç –ø—Ä–∞–≤–∏–ª—å–Ω–æ –æ–±—Ä–∞–±–æ—Ç–∞–Ω –∏ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω")
        return True
    else:
        print(f"   ‚ùå –ü—Ä–æ–±–ª–µ–º–∞: text_chunks={len(text_chunks)}, command_payload={command_payload}")
        return False


async def test_json_command_response():
    """–¢–µ—Å—Ç 2: JSON –æ—Ç–≤–µ—Ç —Å –∫–æ–º–∞–Ω–¥–æ–π ‚Üí –∫–ª–∏–µ–Ω—Ç"""
    print("\n" + "="*80)
    print("–¢–ï–°–¢ 2: JSON –æ—Ç–≤–µ—Ç —Å –∫–æ–º–∞–Ω–¥–æ–π ‚Üí –∫–ª–∏–µ–Ω—Ç")
    print("="*80)
    
    # –°–∏–º—É–ª–∏—Ä—É–µ–º JSON –æ—Ç–≤–µ—Ç LLM
    llm_response = '```json\n{\n  "text": "Opening Safari.",\n  "command": "open_app",\n  "args": {\n    "app_name": "Safari"\n  }\n}\n```'
    
    text_module = MockTextModule(llm_response)
    audio_module = MockAudioModule()
    text_filter = MockTextFilterModule()
    
    workflow = StreamingWorkflowIntegration(
        text_processor=text_module,
        audio_processor=audio_module,
        text_filter_manager=text_filter,
        memory_workflow=None
    )
    
    await workflow.initialize()
    
    # –°–∏–º—É–ª–∏—Ä—É–µ–º –∑–∞–ø—Ä–æ—Å (—Ñ–æ—Ä–º–∞—Ç –∫–∞–∫ –≤ gRPC)
    request_data = {
        "text": "open Safari",
        "screenshot": None,
        "session_id": "test_session_command_456",
        "hardware_id": "test_hardware_456"
    }
    
    # –°–æ–±–∏—Ä–∞–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
    text_chunks = []
    audio_chunks = []
    command_payload = None
    final_result = None
    text_full_response = None
    all_results = []
    
    async for result in workflow.process_request_streaming(request_data):
        all_results.append(result)
        if result.get('text_response'):
            text_chunks.append(result['text_response'])
        if result.get('audio_chunk'):
            audio_chunks.append(result['audio_chunk'])
        if result.get('command_payload'):
            command_payload = result['command_payload']
        if result.get('is_final'):
            final_result = result
            text_full_response = result.get('text_full_response')
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
    print(f"\nüìä –†–µ–∑—É–ª—å—Ç–∞—Ç—ã:")
    print(f"   ‚úÖ –í—Å–µ–≥–æ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤: {len(all_results)}")
    print(f"   ‚úÖ Text chunks (–ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã–µ): {len(text_chunks)}")
    print(f"   ‚úÖ Audio chunks (–ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã–µ): {len(audio_chunks)}")
    print(f"   ‚úÖ Text full response (—Ñ–∏–Ω–∞–ª—å–Ω—ã–π): {'–µ—Å—Ç—å' if text_full_response else '–Ω–µ—Ç'}")
    if text_full_response:
        print(f"      - –°–æ–¥–µ—Ä–∂–∏–º–æ–µ: '{text_full_response}'")
    print(f"   ‚úÖ Command payload: {'–µ—Å—Ç—å' if command_payload else '–Ω–µ—Ç'}")
    print(f"   ‚úÖ Final result: {'–µ—Å—Ç—å' if final_result else '–Ω–µ—Ç'}")
    
    # –ü–æ–∫–∞–∑—ã–≤–∞–µ–º –≤—Å–µ —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
    if not text_full_response and final_result:
        print(f"\nüîç –û—Ç–ª–∞–¥–∫–∞ —Ñ–∏–Ω–∞–ª—å–Ω–æ–≥–æ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–∞:")
        print(f"   - –ö–ª—é—á–∏: {list(final_result.keys())}")
        print(f"   - text_full_response –∑–Ω–∞—á–µ–Ω–∏–µ: {repr(final_result.get('text_full_response'))}")
        print(f"   - sentences_processed: {final_result.get('sentences_processed', 0)}")
    
    if command_payload:
        payload = command_payload.get('payload', {})
        command = payload.get('command')
        args = payload.get('args', {})
        app_name = args.get('app_name') if isinstance(args, dict) else None
        
        print(f"\nüìã Command payload –¥–µ—Ç–∞–ª–∏:")
        print(f"   - Command: {command}")
        print(f"   - App name: {app_name}")
        print(f"   - Session ID: {payload.get('session_id')}")
        
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ –µ—Å—Ç—å –ª–∏–±–æ –ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã–µ —á–∞–Ω–∫–∏, –ª–∏–±–æ —Ñ–∏–Ω–∞–ª—å–Ω—ã–π —Ç–µ–∫—Å—Ç
        # –î–ª—è JSON –∫–æ–º–∞–Ω–¥ —Ç–µ–∫—Å—Ç –º–æ–∂–µ—Ç –±—ã—Ç—å –∫–æ—Ä–æ—Ç–∫–∏–º –∏ –Ω–µ –ø—Ä–æ–π—Ç–∏ –ø–æ—Ä–æ–≥–∏ —ç–º–∏—Å—Å–∏–∏
        # –í —ç—Ç–æ–º —Å–ª—É—á–∞–µ –≤–∞–∂–Ω–æ, —á—Ç–æ –∫–æ–º–∞–Ω–¥–∞ –∏–∑–≤–ª–µ—á–µ–Ω–∞, –∞ —Ç–µ–∫—Å—Ç –º–æ–∂–µ—Ç –±—ã—Ç—å –ø—É—Å—Ç—ã–º
        has_text = len(text_chunks) > 0 or (text_full_response and text_full_response.strip())
        
        # –î–ª—è –∫–æ–º–∞–Ω–¥ –≤–∞–∂–Ω–æ, —á—Ç–æ command_payload –∏–∑–≤–ª–µ—á–µ–Ω, —Ç–µ–∫—Å—Ç –æ–ø—Ü–∏–æ–Ω–∞–ª–µ–Ω
        if command == "open_app" and app_name == "Safari":
            if has_text:
                if text_full_response:
                    print(f"   ‚úÖ –¢–µ–∫—Å—Ç –≤ —Ñ–∏–Ω–∞–ª—å–Ω–æ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç–µ: {text_full_response}")
                elif text_chunks:
                    print(f"   ‚úÖ –¢–µ–∫—Å—Ç –≤ –ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã—Ö —á–∞–Ω–∫–∞—Ö: {text_chunks[0]}")
            else:
                print(f"   ‚ö†Ô∏è  –¢–µ–∫—Å—Ç –ø—É—Å—Ç–æ–π (–≤–æ–∑–º–æ–∂–Ω–æ, —Å–ª–∏—à–∫–æ–º –∫–æ—Ä–æ—Ç–∫–∏–π –¥–ª—è –ø–æ—Ä–æ–≥–æ–≤ —ç–º–∏—Å—Å–∏–∏)")
                print(f"   ‚úÖ –ù–æ —ç—Ç–æ –Ω–æ—Ä–º–∞–ª—å–Ω–æ –¥–ª—è –∫–æ–º–∞–Ω–¥ - –≥–ª–∞–≤–Ω–æ–µ, —á—Ç–æ command_payload –∏–∑–≤–ª–µ—á–µ–Ω")
            
            print(f"\n‚úÖ –¢–ï–°–¢ 2 –ü–†–û–ô–î–ï–ù: JSON –∫–æ–º–∞–Ω–¥–∞ –ø—Ä–∞–≤–∏–ª—å–Ω–æ –∏–∑–≤–ª–µ—á–µ–Ω–∞ –∏ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω–∞")
            return True
            if text_full_response:
                print(f"   ‚úÖ –¢–µ–∫—Å—Ç –≤ —Ñ–∏–Ω–∞–ª—å–Ω–æ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç–µ: {text_full_response}")
            elif text_chunks:
                print(f"   ‚úÖ –¢–µ–∫—Å—Ç –≤ –ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã—Ö —á–∞–Ω–∫–∞—Ö: {text_chunks[0]}")
            print(f"\n‚úÖ –¢–ï–°–¢ 2 –ü–†–û–ô–î–ï–ù: JSON –∫–æ–º–∞–Ω–¥–∞ –ø—Ä–∞–≤–∏–ª—å–Ω–æ –∏–∑–≤–ª–µ—á–µ–Ω–∞ –∏ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω–∞")
            return True
        else:
            print(f"   ‚ùå –ü—Ä–æ–±–ª–µ–º–∞: command={command}, app={app_name}, has_text={has_text}")
            return False
    else:
        print(f"   ‚ùå Command payload –Ω–µ –∏–∑–≤–ª–µ—á–µ–Ω!")
        print(f"   ‚ö†Ô∏è  –í–æ–∑–º–æ–∂–Ω–æ, —Ñ–∏—á–∞-—Ñ–ª–∞–≥ forward_assistant_actions –≤—ã–∫–ª—é—á–µ–Ω")
        return False


async def test_grpc_format():
    """–¢–µ—Å—Ç 3: –ü—Ä–æ–≤–µ—Ä–∫–∞ —Ñ–æ—Ä–º–∞—Ç–∞ –¥–∞–Ω–Ω—ã—Ö –¥–ª—è gRPC"""
    print("\n" + "="*80)
    print("–¢–ï–°–¢ 3: –§–æ—Ä–º–∞—Ç –¥–∞–Ω–Ω—ã—Ö –¥–ª—è gRPC –æ—Ç–ø—Ä–∞–≤–∫–∏")
    print("="*80)
    
    # –°–∏–º—É–ª–∏—Ä—É–µ–º JSON –æ—Ç–≤–µ—Ç LLM
    llm_response = '{\n  "text": "Opening Telegram.",\n  "command": "open_app",\n  "args": {\n    "app_name": "Telegram"\n  }\n}'
    
    text_module = MockTextModule(llm_response)
    audio_module = MockAudioModule([b"chunk1", b"chunk2"])
    text_filter = MockTextFilterModule()
    
    workflow = StreamingWorkflowIntegration(
        text_processor=text_module,
        audio_processor=audio_module,
        text_filter_manager=text_filter,
        memory_workflow=None
    )
    
    await workflow.initialize()
    
    request_data = {
        "text": "open Telegram",
        "screenshot": None,
        "session_id": "test_session_grpc_789",
        "hardware_id": "test_hardware_789"
    }
    
    # –°–æ–±–∏—Ä–∞–µ–º –≤—Å–µ —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
    all_results = []
    async for result in workflow.process_request_streaming(request_data):
        all_results.append(result)
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å—Ç—Ä—É–∫—Ç—É—Ä—É —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤
    print(f"\nüìä –í—Å–µ–≥–æ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤: {len(all_results)}")
    
    has_text_chunks = False
    has_audio_chunks = False
    has_text_full = False
    has_command = False
    has_final = False
    
    for i, result in enumerate(all_results, 1):
        print(f"\n   –†–µ–∑—É–ª—å—Ç–∞—Ç #{i}:")
        print(f"      - –¢–∏–ø—ã: {list(result.keys())}")
        
        if 'text_response' in result:
            has_text_chunks = True
            print(f"      - Text chunk: {result['text_response'][:50]}...")
        
        if 'audio_chunk' in result:
            has_audio_chunks = True
            print(f"      - Audio chunk: {len(result['audio_chunk'])} bytes")
        
        if 'text_full_response' in result:
            has_text_full = True
            print(f"      - Text full: {result['text_full_response'][:50]}...")
        
        if 'command_payload' in result:
            has_command = True
            payload = result['command_payload']
            print(f"      - Command: {payload.get('payload', {}).get('command', 'unknown')}")
        
        if result.get('is_final'):
            has_final = True
            print(f"      - Final: True")
            if 'command_payload' in result:
                print(f"      - Command –≤ final: –µ—Å—Ç—å")
            if 'text_full_response' in result:
                print(f"      - Text full –≤ final: –µ—Å—Ç—å")
    
    print(f"\nüìã –ü—Ä–æ–≤–µ—Ä–∫–∞ –Ω–∞–ª–∏—á–∏—è –∫–æ–º–ø–æ–Ω–µ–Ω—Ç–æ–≤:")
    print(f"   ‚úÖ Text chunks (–ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã–µ): {has_text_chunks}")
    print(f"   ‚úÖ Audio chunks (–ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã–µ): {has_audio_chunks}")
    print(f"   ‚úÖ Text full response (—Ñ–∏–Ω–∞–ª—å–Ω—ã–π): {has_text_full}")
    print(f"   ‚úÖ Command payload: {has_command}")
    print(f"   ‚úÖ Final result: {has_final}")
    
    # –¢–µ–∫—Å—Ç –º–æ–∂–µ—Ç –±—ã—Ç—å –ª–∏–±–æ –≤ –ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã—Ö —á–∞–Ω–∫–∞—Ö, –ª–∏–±–æ –≤ —Ñ–∏–Ω–∞–ª—å–Ω–æ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç–µ
    has_text = has_text_chunks or has_text_full
    # –ê—É–¥–∏–æ –º–æ–∂–µ—Ç –±—ã—Ç—å –ª–∏–±–æ –≤ –ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã—Ö —á–∞–Ω–∫–∞—Ö, –ª–∏–±–æ –≤ —Ñ–∏–Ω–∞–ª—å–Ω–æ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç–µ (—á–µ—Ä–µ–∑ audio_chunks_processed)
    
    if has_text and has_command and has_final:
        print(f"\n‚úÖ –¢–ï–°–¢ 3 –ü–†–û–ô–î–ï–ù: –í—Å–µ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã –ø—Ä–∞–≤–∏–ª—å–Ω–æ —Å—Ñ–æ—Ä–º–∏—Ä–æ–≤–∞–Ω—ã –¥–ª—è gRPC")
        return True
    else:
        print(f"\n‚ùå –¢–ï–°–¢ 3 –ù–ï –ü–†–û–ô–î–ï–ù: –û—Ç—Å—É—Ç—Å—Ç–≤—É—é—Ç –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã")
        return False


async def test_session_id_handling():
    """–¢–µ—Å—Ç 4: –ü—Ä–æ–≤–µ—Ä–∫–∞ –ø—Ä–∞–≤–∏–ª—å–Ω–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏ session_id"""
    print("\n" + "="*80)
    print("–¢–ï–°–¢ 4: –û–±—Ä–∞–±–æ—Ç–∫–∞ session_id –≤ command_payload")
    print("="*80)
    
    # JSON –±–µ–∑ session_id (LLM –º–æ–∂–µ—Ç –Ω–µ –≤–∫–ª—é—á–∏—Ç—å –µ–≥–æ)
    llm_response = '{\n  "text": "Opening Calculator.",\n  "command": "open_app",\n  "args": {\n    "app_name": "Calculator"\n  }\n}'
    
    text_module = MockTextModule(llm_response)
    audio_module = MockAudioModule()
    text_filter = MockTextFilterModule()
    
    workflow = StreamingWorkflowIntegration(
        text_processor=text_module,
        audio_processor=audio_module,
        text_filter_manager=text_filter,
        memory_workflow=None
    )
    
    await workflow.initialize()
    
    request_data = {
        "text": "open Calculator",
        "screenshot": None,
        "session_id": "test_session_calc_999",
        "hardware_id": "test_hardware_999"
    }
    
    command_payload = None
    async for result in workflow.process_request_streaming(request_data):
        if result.get('command_payload'):
            command_payload = result['command_payload']
    
    if command_payload:
        payload = command_payload.get('payload', {})
        cmd_session_id = payload.get('session_id')
        expected_session_id = request_data['session_id']
        
        print(f"\nüìã Session ID –ø—Ä–æ–≤–µ—Ä–∫–∞:")
        print(f"   - –û–∂–∏–¥–∞–µ–º—ã–π: {expected_session_id}")
        print(f"   - –í payload: {cmd_session_id}")
        
        if cmd_session_id == expected_session_id:
            print(f"   ‚úÖ Session ID –ø—Ä–∞–≤–∏–ª—å–Ω–æ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω!")
            print(f"\n‚úÖ –¢–ï–°–¢ 4 –ü–†–û–ô–î–ï–ù: Session ID –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ –æ–±—Ä–∞–±–æ—Ç–∞–Ω")
            return True
        else:
            print(f"   ‚ùå Session ID –Ω–µ —Å–æ–≤–ø–∞–¥–∞–µ—Ç!")
            return False
    else:
        print(f"   ‚ùå Command payload –Ω–µ –Ω–∞–π–¥–µ–Ω!")
        return False


async def main():
    """–ó–∞–ø—É—Å–∫ –≤—Å–µ—Ö —Ç–µ—Å—Ç–æ–≤ –ø–æ–ª–Ω–æ–π —Ü–µ–ø–æ—á–∫–∏"""
    print("\n" + "="*80)
    print("–ò–ù–¢–ï–ì–†–ê–¶–ò–û–ù–ù–û–ï –¢–ï–°–¢–ò–†–û–í–ê–ù–ò–ï –ü–û–õ–ù–û–ô –¶–ï–ü–û–ß–ö–ò")
    print("="*80)
    print("\n–ü—Ä–æ–≤–µ—Ä–∫–∞:")
    print("1. –û–±—ã—á–Ω—ã–π —Ç–µ–∫—Å—Ç ‚Üí –∫–ª–∏–µ–Ω—Ç")
    print("2. JSON –∫–æ–º–∞–Ω–¥–∞ ‚Üí –∫–ª–∏–µ–Ω—Ç")
    print("3. –§–æ—Ä–º–∞—Ç –¥–∞–Ω–Ω—ã—Ö –¥–ª—è gRPC")
    print("4. –û–±—Ä–∞–±–æ—Ç–∫–∞ session_id")
    
    results = []
    
    # –¢–µ—Å—Ç 1: –û–±—ã—á–Ω—ã–π —Ç–µ–∫—Å—Ç
    results.append(("–û–±—ã—á–Ω—ã–π —Ç–µ–∫—Å—Ç ‚Üí –∫–ª–∏–µ–Ω—Ç", await test_text_only_response()))
    
    # –¢–µ—Å—Ç 2: JSON –∫–æ–º–∞–Ω–¥–∞
    results.append(("JSON –∫–æ–º–∞–Ω–¥–∞ ‚Üí –∫–ª–∏–µ–Ω—Ç", await test_json_command_response()))
    
    # –¢–µ—Å—Ç 3: –§–æ—Ä–º–∞—Ç gRPC
    results.append(("–§–æ—Ä–º–∞—Ç –¥–∞–Ω–Ω—ã—Ö gRPC", await test_grpc_format()))
    
    # –¢–µ—Å—Ç 4: Session ID
    results.append(("–û–±—Ä–∞–±–æ—Ç–∫–∞ session_id", await test_session_id_handling()))
    
    # –ò—Ç–æ–≥–∏
    print("\n" + "="*80)
    print("–ò–¢–û–ì–ò –¢–ï–°–¢–ò–†–û–í–ê–ù–ò–Ø –ü–û–õ–ù–û–ô –¶–ï–ü–û–ß–ö–ò")
    print("="*80)
    
    passed = sum(1 for _, result in results if result)
    total = len(results)
    
    for name, result in results:
        status = "‚úÖ PASS" if result else "‚ùå FAIL"
        print(f"{status} - {name}")
    
    print(f"\nüìä –†–µ–∑—É–ª—å—Ç–∞—Ç: {passed}/{total} —Ç–µ—Å—Ç–æ–≤ –ø—Ä–æ–π–¥–µ–Ω–æ")
    
    if passed == total:
        print("\nüéâ –í—Å–µ —Ç–µ—Å—Ç—ã –ø—Ä–æ–π–¥–µ–Ω—ã! –ü–æ–ª–Ω–∞—è —Ü–µ–ø–æ—á–∫–∞ —Ä–∞–±–æ—Ç–∞–µ—Ç –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ.")
        print("\n‚úÖ –ì–æ—Ç–æ–≤–æ –∫ –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏—é:")
        print("   - –û–±—ã—á–Ω—ã–π —Ç–µ–∫—Å—Ç –ø—Ä–∞–≤–∏–ª—å–Ω–æ –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç—Å—è –∫–ª–∏–µ–Ω—Ç—É")
        print("   - JSON –∫–æ–º–∞–Ω–¥—ã –ø—Ä–∞–≤–∏–ª—å–Ω–æ –∏–∑–≤–ª–µ–∫–∞—é—Ç—Å—è –∏ –æ—Ç–ø—Ä–∞–≤–ª—è—é—Ç—Å—è")
        print("   - –§–æ—Ä–º–∞—Ç –¥–∞–Ω–Ω—ã—Ö —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤—É–µ—Ç gRPC –ø—Ä–æ—Ç–æ–∫–æ–ª—É")
        print("   - Session ID –ø—Ä–∞–≤–∏–ª—å–Ω–æ –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç—Å—è")
        return 0
    else:
        print(f"\n‚ö†Ô∏è  {total - passed} —Ç–µ—Å—Ç(–æ–≤) –Ω–µ –ø—Ä–æ–π–¥–µ–Ω–æ. –ü—Ä–æ–≤–µ—Ä—å—Ç–µ –ª–æ–≥–∏–∫—É –æ–±—Ä–∞–±–æ—Ç–∫–∏.")
        return 1


if __name__ == "__main__":
    sys.exit(asyncio.run(main()))

